  * Write out network-manager configuration files with mode 0600.
  * Reword target_network_config template; do not ask the question.
  * nm-conf: use ESSID as connection name
  * finish-install: Do not set /etc/network/interfaces to mode 0600.
  * nm-conf: Allow both IPv4 and IPv6 to be activated post-installation.
  * nm-conf: Only write out MAC addresses on static configurations.

  [ Cyril Brulebois ]
  * finish-install: Fix bashisms; equality tests are done with '='.

 -- Philipp Kern <pkern@debian.org>  Tue, 20 Nov 2012 00:42:34 +0100

netcfg (1.101) unstable; urgency=low

  * Skip reachability test for empty gateway. (Closes: #690868)
  * Obey netcfg/disable_dhcp for compatibility reasons and disable
    autoconfig. There's no need to break old preseeding scripts,
    as the intent is clear.
  * Add a debconf template for netcfg/disable_autoconfig and state
    that netcfg/disable_dhcp is deprecated.

 -- Philipp Kern <pkern@debian.org>  Sat, 03 Nov 2012 21:48:31 +0100

netcfg (1.100) unstable; urgency=low

  * Temporarily revert the activation of IPv6 privacy extensions
    to cope with network-manager not commenting out the interfaces
    stanza correctly.

 -- Philipp Kern <pkern@debian.org>  Sun, 28 Oct 2012 10:16:17 +0100

netcfg (1.99) unstable; urgency=low

  [ Philipp Kern ]
  * netcfg.c (main): Remove a local definition of hostname.
    (Closes: #690330)
  * Override the hostname found via DHCP or DNS with the preseeded
    value of the new variable netcfg/hostname, if set. Patch by
    Floris Bos. (Closes: #606636)
  * Add myself to uploaders.

  [ Updated translations ]
  * Amharic (am.po) by Tegegne Tefera
  * Asturian (ast.po) by Mikel González
  * Welsh (cy.po) by Dafydd Tomos
  * Esperanto (eo.po) by Felipe Castro
  * Spanish (es.po) by Javier Fernández-Sanguino
  * Galician (gl.po) by Jorge Barreiro
  * Kannada (kn.po) by Prabodh
  * Serbian (sr.po) by Karolina Kalic
  * Tamil (ta.po) by Dr.T.Vasudevan
  * Ukrainian (uk.po) by Yuri Chornoivan