@@ -9,10 +9,14 @@ TARGETS		?= netcfg-static netcfg
 LDOPTS		= -ldebconfclient -ldebian-installer
 CFLAGS		= -W -Wall -Werror -DNDEBUG -DNETCFG_VERSION="\"$(NETCFG_VERSION)\"" -DNETCFG_BUILD_DATE="\"$(NETCFG_BUILD_DATE)\"" -I.
 COMMON_OBJS	= netcfg-common.o wireless.o write_interface.o ipv6.o
+NETCFG_O   	= netcfg.o dhcp.o static.o ethtool-lite.o wpa.o wpa_ctrl.o rdnssd.o autoconfig.o
+NETCFG_STATIC_O	= netcfg-static.o static.o ethtool-lite.o
 
 WIRELESS	= 1
+NM		= 1
 ifneq ($(DEB_HOST_ARCH_OS),linux)
 WIRELESS	= 0
+NM		= 0
 endif
 ifeq ($(DEB_HOST_ARCH),s390)
 WIRELESS	= 0
@@ -28,6 +32,10 @@ ifneq ($(WIRELESS),0)
 LDOPTS		+= -liw
 CFLAGS		+= -DWIRELESS
 endif
+ifneq ($(NM),0)
+CFLAGS		+= -DNM
+NETCFG_O	+= nm-conf.o
+endif
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
 CFLAGS += -O0 -g3
@@ -37,8 +45,8 @@ endif
 
 all: $(TARGETS)
 
-netcfg-static: netcfg-static.o static.o ethtool-lite.o
-netcfg: netcfg.o dhcp.o static.o ethtool-lite.o wpa.o wpa_ctrl.o rdnssd.o autoconfig.o nm-conf.o
+netcfg-static: $(NETCFG_STATIC_O)
+netcfg: $(NETCFG_O)
 
 ethtool-lite: ethtool-lite-test.o
 	$(CC) -o $@ $<
