@@ -1,2 +1,2 @@
 base-installer.d usr/lib
-finish-install.d/55netcfg-network-manager usr/lib/finish-install.d
+finish-install.d/55netcfg-copy-config usr/lib/finish-install.d
